tests/snapshots/command/output-ws-h16.snap
---
source: tests/runner.rs
description: top-type-sizes -ws -h16
---
208 std::sys::unix::process::process_common::Command align=8
     32 env
     24 args
     24 argv
     24 closures
     16 cwd
     16 groups
     16 program
