tests/snapshots/command/output-ws.snap
---
source: tests/runner.rs
description: top-type-sizes -ws
---
208 std::sys::unix::process::process_common::Command align=8
     32 env
     24 args
     24 argv
     24 closures
     16 cwd
     16 groups
     16 program
      8 stdin
      8 stdout
      8 stderr
      8 uid
      8 gid
      8 pgroup
      1 program_kind
      1 saw_nul
      1 create_pidfd
