tests/snapshots/command/types.snap
---
source: tests/runner.rs
description: internal representation
---
- name: "std::sys::unix::process::process_common::Command"
  size: 208
  align: 8
  kind:
    Struct:
      items:
        - Field:
            kind: AdtField
            name: env
            size: 32
        - Field:
            kind: AdtField
            name: cwd
            size: 16
        - Field:
            kind: AdtField
            name: groups
            size: 16
        - Field:
            kind: AdtField
            name: program
            size: 16
        - Field:
            kind: AdtField
            name: args
            size: 24
        - Field:
            kind: AdtField
            name: argv
            size: 24
        - Field:
            kind: AdtField
            name: closures
            size: 24
        - Field:
            kind: AdtField
            name: stdin
            size: 8
        - Field:
            kind: AdtField
            name: stdout
            size: 8
        - Field:
            kind: AdtField
            name: stderr
            size: 8
        - Field:
            kind: AdtField
            name: uid
            size: 8
        - Field:
            kind: AdtField
            name: gid
            size: 8
        - Field:
            kind: AdtField
            name: pgroup
            size: 8
        - Field:
            kind: AdtField
            name: program_kind
            size: 1
        - Field:
            kind: AdtField
            name: saw_nul
            size: 1
        - Field:
            kind: AdtField
            name: create_pidfd
            size: 1
  end_padding: 5
